# learn2

qtquick/lesson_4/1/: CMakeLists.txt  graphics.cpp  graphics.h  main.cpp  main.qml
qtquick/lesson_4/2/: CMakeLists.txt  main.cpp  main.qml
qtquick/lesson_5/1/: CMakeLists.txt  JavaScriptLibrary.js  main.qml
qtquick/lesson_5/2/: CMakeLists.txt  loginpage.qml  main.cpp  main.qml  page1.qml  page2.qml
qtquick/lesson_6/1/: CMakeLists.txt  main.qml
qtquick/lesson_6/2/: CMakeLists.txt  main.cpp  main.qml
qtquick/lesson_6/3/: CMakeLists.txt  Funcs.js  main.cpp  main.qml
qtquick/lesson_7/1/: CMakeLists.txt  main.cpp  main.qml
qtquick/lesson_7/1/funcs/: CapitalsFunctions.js  PriceFunctions.js  UsersFunctions.js
qtquick/lesson_7/1/pages/: capitals.qml  price.qml  users.qml
qtquick/lesson_7/2/: CMakeLists.txt  Main.qml  main.cpp  qmltablemodel.cpp  qmltablemodel.h
qtquick/lesson_7/3/: CComboBox.qml  CMakeLists.txt  CPopup.qml  CTextField.qml  Main.qml  main.cpp  qrc.qrc
